--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "books",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "name": "books",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject"
+    },
+    "dependencies": {
+        "@react-native-community/masked-view": "^0.1.11",
+        "axios": "^0.26.0",
+        "expo": "~44.0.0",
+        "expo-status-bar": "~1.2.0",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-native": "0.64.3",
+        "react-native-elements": "^3.4.2",
+        "react-native-gesture-handler": "~2.1.0",
+        "react-native-reanimated": "~2.3.1",
+        "react-native-safe-area-context": "3.3.2",
+        "react-native-screens": "~3.10.1",
+        "react-native-web": "0.17.1",
+        "react-native-webview": "^11.15.0",
+        "react-navigation": "^4.4.4",
+        "react-navigation-stack": "^2.10.4",
+        "react-navigation-tabs": "^2.11.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9"
+    },
+    "private": true
 }
